--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Localization/HelloAbp/en.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Localization/HelloAbp/en.json
@@ -3,6 +3,35 @@
   "texts": {
     "Menu:Home": "Home",
     "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Menu:Dashboard": "Dashboard",
+    "Menu:Documentation": "Documentation",
+    "Menu:Guide": "Guide",
+    "Menu:Profile": "Profile",
+    "Navbar:Dashboard": "Dashboard",
+    "Navbar:Github": "Github",
+    "Navbar:LogOut": "Log Out",
+    "Navbar:Profile": "Profile",
+    "Navbar:Theme": "Theme",
+    "Navbar:Size": "Global Size",
+    "Login:Title": "Login Form",
+    "Login:LogIn": "Login",
+    "Login:UserName": "Username",
+    "Login:Password": "Password",
+    "Login:ThirdParty": "Or connect with",
+    "Login:ThirdPartyTips": "Can not be simulated on local, so please combine you own business simulation! ! !",
+    "Documentation:Documentation": "Documentation",
+    "Documentation:Github": "Github Repository",
+    "Guide:Description": "The guide page is useful for some people who entered the project for the first time. You can briefly introduce the features of the project. Demo is based on ",
+    "Guide:Button": "Show Guide",
+    "TagsView:Refresh": "Refresh",
+    "TagsView:Close": "Close",
+    "TagsView:CloseOthers": "Close Others",
+    "TagsView:CloseAll": "Close All",
+    "Settings:Title": "Page style setting",
+    "Settings:Theme": "Theme Color",
+    "Settings:TagsView": "Open Tags-View",
+    "Settings:FixedHeader": "Fixed Header",
+    "Settings:SidebarLogo": "Sidebar Logo"
   }
 }
