--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Localization/HelloAbp/zh-Hans.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Localization/HelloAbp/zh-Hans.json
@@ -4,6 +4,7 @@
     "Menu:Home": "首页",
     "Welcome": "欢迎",
     "LongWelcomeMessage": "欢迎来到该应用程序. 这是一个基于ABP框架的启动项目. 有关更多信息, 请访问 abp.io.",
+    "Permission:OrganitaionUnitManagement": "组织单元管理",
     "Menu:Dashboard": "首页",
     "Menu:Documentation": "文档",
     "Menu:Guide": "引导页",
