--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Localization/HelloAbp/en.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Localization/HelloAbp/en.json
@@ -41,6 +41,9 @@
     "Info": "Info",
     "Error": "Error",
     "ErrorMessage": "The operation failed!",
-    "Identity.OrganizationUnit.MemberExists": "The member {0} already exists in the current organization {1}"
+    "Identity.OrganizationUnit.MemberExists": "The member {0} already exists in the current organization {1}",
+    "Feature:SocialLogins": "SocialLogins",
+    "Feature:UserCount": "UserCount",
+    "Feature:UserCount.Maximum": "The maximum number of users allowed is {0}"
   }
 }
