--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/Identity/Localization/HelloAbp/en.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/Identity/Localization/HelloAbp/en.json
@@ -5,7 +5,12 @@
     "Permission:DistributionOrganizationUnit": "AddUnitMember",
     "MemberExists": "The member {0} already exists in the current organization {1}",
     "OrganitaionUnits": "OrganitaionUnits",
-    "NewOrganitaionUnitChild": "NewOrganitaionUnitChild",
-    "NewOrganitaionUnit": "NewOrganitaionUnit"
+    "NewOrganitaionUnitChild": "NewChild",
+    "NewOrganitaionUnit": "NewOrganitaionUnit",
+    "OUCode": "code",
+    "OUParentCode": "parentCode",
+    "OUDisplayName": "name",
+    "OUParentDisplayName": "parentName",
+    "OUDeletionConfirmationMessage": "OrganitaionUnit '{0}' will be deleted. Do you confirm that?"
   }
 }
