--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/Identity/Localization/HelloAbp/zh-Hans.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/Identity/Localization/HelloAbp/zh-Hans.json
@@ -6,6 +6,11 @@
     "MemberExists": "该成员{0}在当前组织{1}已存在",
     "OrganitaionUnits": "组织单元",
     "NewOrganitaionUnitChild": "添加子节点",
-    "NewOrganitaionUnit": "新增"
+    "NewOrganitaionUnit": "新组织",
+    "OUCode": "编码",
+    "OUParentCode": "上级编码",
+    "OUDisplayName": "名称",
+    "OUParentDisplayName": "上级名称",
+    "OUDeletionConfirmationMessage": "组织 '{0}' 将被删除. 你确定吗?"
   }
 }
