--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/Identity/Localization/HelloAbp/zh-Hans.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/Identity/Localization/HelloAbp/zh-Hans.json
@@ -3,6 +3,7 @@
   "texts": {
     "Permission:OrganitaionUnitManagement": "组织单元管理",
     "Permission:DistributionOrganizationUnit": "添加组织成员",
+    "Permission:AddOrganizationUnitRole": "添加组织角色",
     "MemberExists": "该成员{0}在当前组织{1}已存在",
     "OrganitaionUnits": "组织单元",
     "NewOrganitaionUnitChild": "添加子节点",
