update auditlog route and add details

--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/AuditLogging/Localization/en.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/AuditLogging/Localization/en.json
@@ -27,7 +27,9 @@
     "UserId": "userId",
     "ApplicationName": "applicationName",
     "Action": "action",
-    "Detail": "Details",
+    "Detail": "details",
+    "Close": "close",
+    "Save": "save",
     "RangeSeparator": "to",
     "StartPlaceholder": "startTime",
     "EndPlaceholder": "endTime",
