1. complete auditlog details 2. add local lang 3. add AuditLogging lang

--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/AuditLogging/Localization/en.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/AuditLogging/Localization/en.json
@@ -26,6 +26,12 @@
     "UserName": "userName",
     "UserId": "userId",
     "ApplicationName": "applicationName",
+    "ExtraProperties": "extraProperties",
+    "MethodName": "methodName",
+    "Parameters": "parameters",
+    "RequsetInfo": "requsetInfo",
+    "Actions": "actions",
+    "EntityChanges": "entityChanges",
     "Action": "action",
     "Detail": "details",
     "Close": "close",
