--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/AuditLogging/Localization/zh-Hans.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/AuditLogging/Localization/zh-Hans.json
@@ -10,7 +10,7 @@
     "HttpStatusCode": "状态码",
     "Comments": "comments",
     "Exceptions": "异常信息",
-    "Url": "地址",
+    "Url": "请求地址",
     "HttpMethod": "请求方法",
     "BrowserInfo": "浏览器信息",
     "CorrelationId": "correlationId",
@@ -26,6 +26,16 @@
     "UserName": "用户名称",
     "UserId": "用户ID",
     "ApplicationName": "服务名称",
+    "ExtraProperties": "扩展信息",
+    "MethodName": "方法名称",
+    "Parameters": "请求参数",
+    "RequsetInfo": "请求信息",
+    "Actions": "请求方法",
+    "EntityChanges": "实体更改",
+    "EntityTypeFullName": "实体名称",
+    "ChangeType": "更改类型",
+    "ChangeTime": "更改时间",
+    "EntityId": "实体ID",
     "Action": "操作",
     "Detail": "详情",
     "Close": "关闭",
