--- a/aspnet-core/modules/data-dictionary/src/Xhznl.DataDictionary.Domain.Shared/Localization/DataDictionary/zh-Hans.json
+++ b/aspnet-core/modules/data-dictionary/src/Xhznl.DataDictionary.Domain.Shared/Localization/DataDictionary/zh-Hans.json
@@ -8,12 +8,17 @@
     "Create": "新增",
     "Permission:DataDictionary": "数据字典管理",
     "Permission:DataDictionaryDetail": "值管理",
-    "DetailLabel": "显示名称",
-    "DetailValue": "值",
-    "DetailSort": "排序大小",
     "NewDataDic": "添加字典",
     "NewDataDicDetail": "添加详情",
+    "Cancel":"取消",
+    "Save":"保存",
     "Actions": "操作",
+    "Label":"显示名称",
+    "Value":"值",
+    "Sort":"排序大小",
+    "Name":"名称",
+    "Filter":"过滤条件",
+    "Description":"描述",
     "DeletionDetailConfirmationMessage": "确认删除{0}?",
     "DetailCreateMasterNullMessage": "未找到字典！",
     "HasCreatedMessage": "名称：{0}字典已存在"
