add permissions and localization

--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/IdentityServer/Localization/en.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/IdentityServer/Localization/en.json
@@ -3,6 +3,11 @@
   "texts": {
     "Menu:IdentityServerManagement":"IdentityServer",
     "Menu:ClientManagement":"Client",
+    "Menu:IdentityResourceManagement":"IdentityResource",
+    "Menu:ApiResourceManagement":"ApiResource",
+    "Permission:ClientManagement": "Client",
+    "Permission:IdentityResourceManagement": "IdentityResource",
+    "Permission:ApiResourceManagement": "ApiResource",
     "Actions":"Actions",
     "Add":"Add",
     "Edit":"Edit",
@@ -11,10 +16,21 @@
     "Permission:Add": "Add",
     "Permission:Update": "Update",
     "Permission:Delete": "Delete",
-    "ClientId": "ClientId",
-    "ClientName": "ClientName",
-    "Description": "Description",
-    "Enabled":"Enabled",
+    "Client:ClientId": "ClientId",
+    "Client:ClientName": "ClientName",
+    "Client:Description": "Description",
+    "Client:Enabled":"Enabled",
+    "ApiResource:Name":"Name",
+    "ApiResource:DisplayName":"DisplayName",
+    "ApiResource:Description":"Description",
+    "ApiResource:Enabled":"Enabled",
+    "IdentityResource:Name":"Name",
+    "IdentityResource:DisplayName":"DisplayName",
+    "IdentityResource:Description":"Description",
+    "IdentityResource:Enabled":"Enabled",
+    "IdentityResource:Required":"Required",
+    "IdentityResource:Emphasize":"Emphasize",
+    "IdentityResource:ShowInDiscoveryDocument":"ShowInDiscoveryDocument",
     "ClientDeletionConfirmationMessage": "Client '{0}' will be deleted. Are you sure?"
   }
 }
