--- a/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/IdentityServer/Localization/zh-Hans.json
+++ b/aspnet-core/src/Xhznl.HelloAbp.Domain.Shared/Volo/Abp/IdentityServer/Localization/zh-Hans.json
@@ -2,9 +2,13 @@
   "culture": "zh-Hans",
   "texts": {
     "GroupIdentityServer":"IdentityServer",
-    "Menu:IdentityServerManagement":"IdentityServer",
-    "Menu:ClientManagement":"Client",
+    "Menu:IdentityServerManagement":"身份服务",
+    "Menu:ClientManagement":"客户端",
+    "Menu:IdentityResourceManagement":"身份资源",
+    "Menu:ApiResourceManagement":"Api资源",
     "Permission:ClientManagement": "客户端管理",
+    "Permission:IdentityResourceManagement": "身份资源管理",
+    "Permission:ApiResourceManagement": "Api资源管理",
     "Actions":"操作",
     "Add":"新增",
     "Edit":"修改",
@@ -13,10 +17,21 @@
     "Permission:Add": "添加",
     "Permission:Update": "修改",
     "Permission:Delete": "删除",
-    "ClientId": "标识",
-    "ClientName": "名称",
-    "Description": "描述",
-    "Enabled":"状态",
+    "Client:ClientId": "标识",
+    "Client:ClientName": "名称",
+    "Client:Description": "描述",
+    "Client:Enabled":"状态",
+    "ApiResource:Name":"名称",
+    "ApiResource:DisplayName":"别名",
+    "ApiResource:Description":"描述",
+    "ApiResource:Enabled":"状态",
+    "IdentityResource:Name":"名称",
+    "IdentityResource:DisplayName":"别名",
+    "IdentityResource:Description":"描述",
+    "IdentityResource:Enabled":"状态",
+    "IdentityResource:Required":"Required",
+    "IdentityResource:Emphasize":"Emphasize",
+    "IdentityResource:ShowInDiscoveryDocument":"ShowInDiscoveryDocument",
     "ClientDeletionConfirmationMessage": "客户端 '{0}' 将被删除. 你确定吗?"
   }
 }
